# multi-gen-ai

./: .gitignore  main.py  pyproject.toml
.gradio/flagged/: dataset1.csv
core/image_captioning/: image_captionizer.py
core/image_generation_from_image/: image_to_image_generator.py
core/image_generation_from_text/: text_to_image_generator.py
core/object_detection/: object_detector.py
core/object_detection_audio/: object_detection_audio.py
core/plugin_question_answering/: qa_api.py  qa_api_flask.py  qa_api_flask_beta.py  qa_api_old.py
core/question_answering/: question_answering.py
core/script_summarization/: script_summarizer.py
core/sentiment_analysis/: sentiment_analyzer.py
core/summarization/: summarizer.py
core/translation/: languages.json  translator.py
