[project]
name = "multi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.25.0",
    "ctransformers[cuda]>=0.2.24",
    "diffusers>=0.25.0",
    "flask>=3.1.1",
    "gradio>=5.34.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.21",
    "llama-cpp-python>=0.3.14",
    "matplotlib>=3.10.3",
    "openai-whisper>=20250625",
    "peft>=0.6.0",
    "phonemizer>=3.3.0",
    "pillow>=9.3.0",
    "pypdf>=5.6.1",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "streamlit>=1.29.0",
    "streamlit-option-menu>=0.4.0",
    "timm>=1.0.16",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.36.2",
    "tts>=0.22.0",
    "watchdog>=6.0.0",
    "youtube-transcript-api>=1.1.0",
    "yt-dlp>=2025.6.25",
]
